src/test/deca/syntax/invalid/decl_var/test_decl_var_float_infinite.deca
// Description:
//    Programme minimaliste affectant une valeur floatante infinie
//
// Resultats:
//    literal value cannot be infinite
//
// Historique:
//    cree le 01/01/2024

{
        float a;
        a = 10.0e+100;
}
